--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -14,8 +14,12 @@
             <p>源码健身</p>
         </header>
         <div class="body">
-            <a> <span>3s</span> | <span>跳过</span> </a>
+
+            <div class="time"> 
+                <span>3s</span> | <span>跳过</span>
+             </div>
             <p>HOLD ON</p>
+            
         </div>
     </div>
 
