fix(修改login register页面)

--- a/src/pages/adpage/adpage.html
+++ b/src/pages/adpage/adpage.html
@@ -16,7 +16,7 @@
         <div class="body">
 
             <div class="time"> 
-                <span>3s</span> | <span>跳过</span>
+                <span>5</span> | <span>跳过</span>
              </div>
             <p>HOLD ON</p>
             
