--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,15 +12,16 @@
 <body>
     <div class="global">
         <div class="body">
-            <a>注册账号</a>
+            <a href="./register.html">注册账号</a>
         </div>
-        <form>
-            <a>密码登录</a>
-            <p><input type="text" id="username" placeholder="请输入账号"></p>
+        <form class="form">
+            <h2>密码登录</h2>
+            <p><input type="text" id="username" placeholder="请输入手机号"></p>
             <p><input type="text" id="pws" placeholder="亲输入密码"></p>
             <p><button type="button">登录</button></p>
             <i>忘记密码 <span class="iconfont icon-weixin"></span>微信登录</i>
         </form>
+        <p class="mes"></p>
     </div>
 
 </body>
