--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -12,18 +12,20 @@
 <body>
     <div class="global">
         <div class="body">
-            <a>密码登录</a>
+            <a href="./login.html">账号登录</a>
         </div>
-        <form>
-            <p><a>手机号登录/注册</a></p>
-            <span>快速找到好友, 一站式记录你的运动</span>
+        <form class="form">
+            <h2>手机号登录/注册</h2>
+            <span class="search">快速找到好友, 一站式记录你的运动</span>
             <p><input type="text" id="username" placeholder="请输入手机号"></p>
-            <p class="code"><input type="text" placeholder="请输入验证码"><strong>123</strong></p>
-            <p><input type="text" id="pws" placeholder="亲输入密码"></p>
-            <p><input type="text" id="sure" placeholder="请再次确认密码"></p>
+            <p class="code"><input type="text" id="code" placeholder="请输入验证码"><canvas width="100" height="40"
+                    id="captcha1"></canvas></p>
+            <p><input type="password" id="pws" placeholder="亲输入密码"></p>
+            <p><input type="password" id="sure" placeholder="请再次确认密码"></p>
             <p><button type="button">注册账号</button></p>
             <span class="iconfont icon-weixin"> <a> 微信注册 </a> </span>
         </form>
+        <p class="mes"></p>
     </div>
 
 </body>
