--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,9 +17,12 @@
         <form class="form">
             <h2>密码登录</h2>
             <p><input type="text" id="username" placeholder="请输入手机号"></p>
-            <p><input type="text" id="pws" placeholder="亲输入密码"></p>
+            <p><input type="password" id="pws" placeholder="亲输入密码"></p>
             <p><button type="button">登录</button></p>
-            <i>忘记密码 <span class="iconfont icon-weixin"></span>微信登录</i>
+            <p>
+                忘记密码
+                <span class="iconfont icon-wechat"> 微信登录</span> 
+            </p>
         </form>
         <p class="mes"></p>
     </div>
