--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -23,7 +23,7 @@
             <p><input type="password" id="pws" placeholder="亲输入密码"></p>
             <p><input type="password" id="sure" placeholder="请再次确认密码"></p>
             <p><button type="button">注册账号</button></p>
-            <span class="iconfont icon-weixin"> <a> 微信注册 </a> </span>
+            <span class="iconfont icon-wechat"> <a> 微信注册 </a> </span>
         </form>
         <p class="mes"></p>
     </div>
