feat(个人信息提交页面完成)

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -51,7 +51,7 @@
                 <span>户外跑步</span>
             </div> 
         </main>
-        <div class="mean">
+        <!-- <div class="mean">
             <span class="iconfont icon-index on">
                 <a>首页</a>
             </span> 
@@ -59,8 +59,28 @@
                 <a href="./motion.html">运动</a>
             </span>
             <span class="my iconfont icon-my">
-                <a>我的</a>
+                <a href="./mine.html">我的</a>
             </span>
+        </div> -->
+        <div class="tabbar">
+            
+                <a href="index.html" class="on">
+                    <span class="iconfont icon-index on"></span>
+                    <span>首页</span>
+                </a>
+                <a href="motion.html">
+                    <span class="iconfont icon-heat on"></span>
+                    <span>运动</span>
+                </a>
+                <a href="">
+                    <span class="iconfont icon-menu on"></span>
+                    <span>圈子</span>
+                </a>
+                <a href="mine.html">
+                    <span class="iconfont icon-my on"></span>
+                    <span>我的</span>
+                </a>
+            
         </div>
     </div>
 </body>
