--- a/src/pages/motion/motion.html
+++ b/src/pages/motion/motion.html
@@ -12,7 +12,7 @@
     <div class="body">
         <header>
             <div class="head">
-                <a href="./motion.html"  class="on">跑步</a>
+                <a href="./motion.html" class="on">跑步</a>
                 <a href="./riding.html">骑行</a>
                 <a href="./train.html">课程训练</a>
             </div>
@@ -45,16 +45,36 @@
             <span>使用跑步路线, 邂逅附近的同行者</span>
         </div>
 
-        <div class="mean">
+        <!-- <div class="mean">
             <span class="iconfont icon-index">
                 <a href="./index.html">首页</a>
-            </span> 
+            </span>
             <span class="motion iconfont icon-heat on">
                 <a>运动</a>
             </span>
             <span class="my iconfont icon-my">
                 <a>我的</a>
             </span>
+        </div> -->
+        <div class="tabbar">
+
+            <a href="index.html">
+                <span class="iconfont icon-index on"></span>
+                <span>首页</span>
+            </a>
+            <a href="motion.html" class="on">
+                <span class="iconfont icon-heat on"></span>
+                <span>运动</span>
+            </a>
+            <a href="">
+                <span class="iconfont icon-menu on"></span>
+                <span>圈子</span>
+            </a>
+            <a href="mine.html">
+                <span class="iconfont icon-my on"></span>
+                <span>我的</span>
+            </a>
+
         </div>
     </div>
 </body>
