feat(课程页面)布局完成js完成80%

--- a/src/pages/train/train.html
+++ b/src/pages/train/train.html
@@ -25,33 +25,44 @@
         <div class="map">
             <h6>最新课程</h6>
             <div class="new">
-                <div class="top">
-                </div>
-                <p>巧克力腹肌雕刻</p>
-                <span>一场痛快淋漓的父级撕裂体验, 虐出你的巧克力腹肌 !</span>
+                <a href="./course.html?id=1" class="top">
+                    <img src="#" alt="">
+                </a>
+                <p id="title">巧克力腹肌雕刻</p>
+                <span id="content">一场痛快淋漓的父级撕裂体验, 虐出你的巧克力腹肌 !</span>
             </div>
+
             <h6>课程</h6>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            <div class="used"></div>
-            
-           
+
+            <div class="course">
+                <!-- <a class="used">
+                    <img src="../../assets/images/course-img01.jpg" alt="">
+                    <h5 class="tittle">徒手胸肌训练进阶</h5>
+                    <p class="content">一场痛快淋漓的父级撕裂体验, 虐出你的巧克力腹肌 !</p>
+                </a> -->
+
+            </div>
+
+
         </div>
-        <div class="mean">
-            <span class="iconfont icon-index">
-                <a href="./index.html">首页</a>
-            </span>
-            <span class="motion iconfont icon-heat on">
-                <a>运动</a>
-            </span>
-            <span class="my iconfont icon-my">
-                <a>我的</a>
-            </span>
+
+        <div class="tabbar">
+            <a href="index.html">
+                <span class="iconfont icon-index on"></span>
+                <span>首页</span>
+            </a>
+            <a href="motion.html" class="on">
+                <span class="iconfont icon-heat on"></span>
+                <span>运动</span>
+            </a>
+            <a href="">
+                <span class="iconfont icon-menu on"></span>
+                <span>圈子</span>
+            </a>
+            <a href="mine.html">
+                <span class="iconfont icon-my on"></span>
+                <span>我的</span>
+            </a>
         </div>
     </div>
 </body>
