--- a/src/pages/riding/riding.html
+++ b/src/pages/riding/riding.html
@@ -45,16 +45,23 @@
             <span>使用骑行路线, 邂逅附近的同行者</span>
         </div>
 
-        <div class="mean">
-            <span class="iconfont icon-index">
-                <a href="./index.html">首页</a>
-            </span>
-            <span class="motion iconfont icon-heat on">
-                <a>运动</a>
-            </span>
-            <span class="my iconfont icon-my">
-                <a>我的</a>
-            </span>
+        <div class="tabbar">
+            <a href="index.html">
+                <span class="iconfont icon-index on"></span>
+                <span>首页</span>
+            </a>
+            <a href="motion.html" class="on">
+                <span class="iconfont icon-heat on"></span>
+                <span>运动</span>
+            </a>
+            <a href="">
+                <span class="iconfont icon-menu on"></span>
+                <span>圈子</span>
+            </a>
+            <a href="mine.html">
+                <span class="iconfont icon-my on"></span>
+                <span>我的</span>
+            </a>
         </div>
     </div>
 </body>
