feat(完成运动板块)

--- a/src/pages/myinfo/myinfo.html
+++ b/src/pages/myinfo/myinfo.html
@@ -28,7 +28,7 @@
 
                     <label>
                         <input type="file" style="display: none" id="avatar">
-                        <img src="../../assets/images/dog.jpg" alt="" id="avatar-img">
+                        <img src="#" alt="" id="avatar-img">
                     </label>
 
                 </div>
