--- a/src/pages/course_detail/course_detail.html
+++ b/src/pages/course_detail/course_detail.html
@@ -12,12 +12,26 @@
     <div class="top">
         <video src="#" muted autoplay>
         </video>
+        <p class="mes">
+            <span id="festival">1</span><span>/</span><span id="total">2</span>
+        </p>
+        <p id="title"></p>
     </div>
     <div class="menu">
         <span class="iconfont icon-previous"></span>
         <span class="iconfont icon-play"></span>
         <span class="iconfont icon-next"></span>
     </div>
+    <!-- 模态框 -->
+    <div class="box">
+        <div class="continue">
+            继续训练
+        </div>
+        <div class="end">
+            结束训练
+        </div>
+    </div>
+
 </body>
 
 </html>
