--- a/src/pages/mine/mine.html
+++ b/src/pages/mine/mine.html
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="data">
+        <a href="./mydata.html" class="data">
             <div class="top">
                 <span class="iconfont icon-data"></span>
                 运动数据
@@ -32,17 +32,15 @@
                 <div class="sport">
                     <p>本周消耗</p>
                     <span>99999</span>分钟
-
                 </div>
                 <div class="consume">
                     <p>总运动</p>
                     <span>99999</span>千卡
                 </div>
             </div>
+        </a>
 
-        </div>
-
-        <div class="data">
+        <a href="./mybadge.html" class="data">
             <div class="top">
                 <span class="iconfont icon-badge"></span>
                 我的运动徽章
@@ -54,7 +52,7 @@
                 <div> </div>
             </div>
 
-        </div>
+        </a>
 
         <div class="loginout">
             退出登录
