--- a/src/pages/motion/motion.html
+++ b/src/pages/motion/motion.html
@@ -88,6 +88,11 @@
             </a>
         </div>
     </div>
+    <div class="mask">
+        <div class="countdown">
+            3
+        </div>
+    </div>
 </body>
 
 </html>
